[gd_scene load_steps=9 format=3 uid="uid://xc52uj0irva"]

[ext_resource type="Script" path="res://scripts/ui/keyboard.gd" id="1_gp5gn"]
[ext_resource type="Texture2D" uid="uid://dfjssj8y6kkj7" path="res://graphics/sprites/ui/keyboard.png" id="1_leyp3"]
[ext_resource type="FontFile" uid="uid://cernpx6usgjfx" path="res://graphics/sprites/ui/PetscopWide.ttf" id="2_ravhw"]
[ext_resource type="Shader" path="res://shaders/screen/keyboard_screen.gdshader" id="3_hca6n"]
[ext_resource type="Texture2D" uid="uid://c6rd0v7n1amog" path="res://graphics/sprites/ui/keyboard_ui.png" id="4_gkk68"]
[ext_resource type="AudioStream" uid="uid://b6s0i4dmjd75v" path="res://sfx/keyboardmove.wav" id="6_ekg64"]

[sub_resource type="LabelSettings" id="LabelSettings_6o683"]
font = ExtResource("2_ravhw")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_exkdt"]
shader = ExtResource("3_hca6n")
shader_parameter/invert = false

[node name="keyboard" type="Node2D"]
process_mode = 3
position = Vector2(0, 240)
script = ExtResource("1_gp5gn")

[node name="fade" type="ColorRect" parent="."]
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
color = Color(0, 0, 0, 0)

[node name="keyboard_background" type="Sprite2D" parent="."]
position = Vector2(47, 38)
texture = ExtResource("1_leyp3")
centered = false
hframes = 4

[node name="keyboard_string" type="Label" parent="keyboard_background"]
offset_left = 10.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 24.0
label_settings = SubResource("LabelSettings_6o683")

[node name="keyboard_ui" type="Sprite2D" parent="keyboard_background"]
position = Vector2(0, 26)
texture = ExtResource("4_gkk68")
centered = false
hframes = 2
frame = 1

[node name="keyboard_inner" type="Node2D" parent="keyboard_background"]
position = Vector2(8, 34)

[node name="selector" type="ColorRect" parent="keyboard_background/keyboard_inner"]
material = SubResource("ShaderMaterial_exkdt")
offset_right = 16.0
offset_bottom = 19.0

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ekg64")
volume_db = 5.0
